# ai-carbon-footprint-estimator

./: README.md  ai_advisor.py  app.py  app_streamlit.py  carbon_calculator.py  database_simple.py  pyproject.toml  requirements_streamlit.txt
