[project]
name = "ai-carbon-footprint-estimator"
version = "0.1.0"
description = "AI-powered carbon footprint calculator with personalized recommendations"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
